# cookiecutter-python-package

./: .gitignore  cookiecutter.json  readme.md
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .python-version  LICENSE.rst  requirements_dev.txt  setup.cfg  setup.py  tasks.py
{{ cookiecutter.project_slug }}/docs/: conf.py  index.rst
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: cli.py
