[bumpversion]
current_version = {{ cookiecutter.version }}
commit = False
tag = False

[bumpversion:file:VERSION]
search = {current_version}
replace = {new_version}

[metadata]
name = {{ cookiecutter.project_slug }}
version = file: VERSION
description = {{ cookiecutter.project_name }}
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
maintainer = {{ cookiecutter.full_name }}
maintainer_email = {{ cookiecutter.email }}
license = MIT
license_file = LICENSE.rst
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8

[options]
zip_safe = False
package_dir = 
	=src
packages = find:
{%- if cookiecutter.use_click == 'y' %}
install_requires = 
	click==7.1.2
{%- endif %}

[options.package_data]
* = *.txt, *.rst

[options.packages.find]
where = src

[flake8]
exclude = docs
